# COMO

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Clustering ToDo.txt  Dockerfile  Dockerfile_test  Exchange Reactions  README.md  __init__.py  _config.yml  docker-compose.yml  environment.yaml  environment.yml  install_jupyter.sh  install_py_libs.sh  install_r_libs.sh  jupyter_lite_config.json  pyproject.toml  requirements.txt  ruff.toml  ty.toml
.githooks/: post-commit  pre-commit
.github/: dependabot.yml
.github/workflows/: container_build.yml  continuous_delivery.yml  continuous_integration.yml  dockerhub.yml  format.yml  publish_notebook.yml  pypackage_build.yml  type_checking.yml  unit_tests.yml
_data/: terms.yml
_data/sidebars/: como_sidebar.yml
_includes/: head.html
build_scripts/: apt_installation_requirements.txt  install_jupyter.sh  install_py_libs.sh  install_r_libs.sh  jupyter_python_setup.sh  mamba_install.txt  pip_install.txt  python_requirements.txt  setup_jupyter.sh
code/: Affy_Script.r  Agilent Analysis and cutoffs.r  AgilentDifferentialExpression.r  Duplicated_cmapFiles_Sript.R  GEO_ID_maps.r  GenCountMatrixTest.Rmd  Knock_out_simulation_1.m  MoMA_analysis_script_KO.m  NEW_SCRIPTS_SCORES_DOWN.R  NEW_SCRIPTS_SCORES_UP.R  Rhistory.r  SCORE.R  SCORE_DOWN.R  SCRIPT_ExtractingFRatio_DE_genes_2.R  Script_CMap_FCMat_data.R  Script_DT.R  Script_EntrezWise_DrugsConMap.R  Script_Replicating_multiEntrezIDs.r  Script_merging_data.R  Validation_withCMap_STAT.R  deleteModelGenes.m  merge_R.R  singleGeneDeletion.m  targets.txt
css/: custom_overrides.css  customstyles.css
data/: GPL14550entrez.csv  GPL17077entrez.csv  GPL4133entrez.csv  GSE56649_RA.xlsx  GeneExpressionDataUsed.xlsx  GeneralModel.mat  Repurposing_Hub_export.txt  Th17_Cell_SpecificModel.mat  Th1_Cell_SpecificModel.mat  Th1_modelDER_BF_g6p_freezed.mat  gpl570entrez.csv  gpl8300entrez.csv  gpl96entrez.csv  gpl97entrez.csv  ~$GeneExpressionDataUsed.xlsx
docker/: .gitlab-ci.yml  Dockerfile  install_jupyter.sh  install_py_libs.sh  install_r_libs.sh  setup_jupyter.sh
docker_old/: install_py_libs.sh
docs/: Gemfile  README.md  TROPPO_FIX.txt  _config.yml  _toc.yaml  index.html  index.md
docs/_data/: navigation.yml  terms.yml  topnav.yml
docs/_includes/: argument_table.html  feedback.html  footer.html  head-custom.html  head.html  navigation.html  sub_navigation.html  topnav.html  workflow_header.html
docs/_layouts/: default.html
docs/pages/: about.html  about.md  example_workflow.html  flowcharts.html  madrid.md  repository_structure.html  resources.html  testing.html  user_defined_workflow.html
docs_new/: _config.yml  index.md
docs_old/_layouts/: default.html
docs_old/pages/: flowcharts.html  resources.html  user_defined_workflow.html
image/: pipeline.tar
main/: COMO.ipynb  config.toml  configuration.toml
main/como/: __init__.py  approx.py  cluster_rnaseq.py  cluster_sources.py  combine_distributions.py  como_utilities.py  create_context_specific_model.py  custom_types.py  data_types.py  density.py  disease_analysis.py  knock_out_simulation.py  merge_xomics.py  migrations.py  peak_finder.py  project.py  proteomics_gen.py  proteomics_preprocessing.py  rnaseq.py  rnaseq_gen.py  rnaseq_preprocess.py  rpy2_api.py  type.py  types.py  utils.py
main/data/: GeneralModelUpdatedV2.mat  Repurposing_Hub_export.txt  iMM_madrid.mat  proteomics_entrez_map.csv
main/py/: GSEpipeline.py  GSEpipelineFast.py  __init__.py  cluster_rnaseq.py  cluster_sources.py  cobamp_replacement.py  create_context_specific_model.py  disease_analysis .py  disease_analysis.py  instruments.py  knock_out_simulation.py  merge_xomics.py  microarray_gen.py  pipeline.ipynb  pipeline_paper_demo.ipynb  project.py  proteomics_gen.py  rnaseq.py  rnaseq_gen.py  rnaseq_preprocess.py  (+2 more)
papers/: .~lock.Links.docx#  Links.docx
py/: Disease_Analysis.ipynb  GSEpipeline.py  GSEpipelineFast.py  RESTful_GEO_Fetch.ipynb  RESTful_Scratch_Pad.ipynb  Scratch_Pad.ipynb  Sort_CEL_Files.ipynb  Test_GSEpipeline.ipynb  Troppo_Test_Tissue_Specific_Model.ipynb  anova.ipynb  app.py  cobrapy_test_scratch.ipynb  create_tissue_specific_model.py  database_setup.py  disease_analysis.py  download_gsm_id_maps.py  instruments.py  knock_out_simulation.py  logical_float.py  merge_xomics.py  merge_xomics_test.ipynb  pipeline.ipynb  populate.py  project.py  proteomics_gen.ipynb  proteomics_gen.py  step1_read_raw_data.py  test_pipeline.py  transcriptomic_gen.ipynb  transcriptomic_gen.py
tests/: test_model_creation.py  test_project.py  test_proteomics.py  test_rnaseq_preprocess.py
(+620 files in other folders)
