[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "COMO"
dynamic = ["version"]
requires-python = ">=3.11,<3.14"
dependencies = [
    "aioftp>=0.23.1",
    "anndata>=0.12.0",
    "cobamp@git+https://github.com/JoshLoecker/cobamp@master",
    "cobra>=0.28.0",
    "fast-bioservices>=0.3.9",
    "kaleido>=1.0.0",
    "loguru>=0.7.2",
    "numpy>=2",
    "openpyxl>=3.1.5",
    "pandas>=1.3.5",
    "scanpy>=1.10.4",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
    "setuptools>=78.1.1",
    "statsmodels>=0.13.0; python_version < '3.12'",
    "statsmodels>=0.14.0; python_version >= '3.12'",
    "troppo@git+https://github.com/JoshLoecker/troppo@master",
]

# User-facing features go into the optional-dependencies
[project.optional-dependencies]
gurobi = ["gurobipy<14"]
interactive = [
    "ipython>=8.0.0",
    "jupyterlab>=4.3.2"
]

[tool.hatch.version]
path = "main/como/__init__.py"

[tool.hatch.build]
packages = ["main/como"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["main/src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.uv.sources]
como = { workspace = true }
cobra = { git = "https://github.com/ripaul/cobrapy", rev = "hopsy-backend" }

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "commitlint>=1.3.1",
    "como",
    "pandas-stubs>=2.3.2.250827",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "scipy-stubs>=1.16.1.1",
]
