[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "COMO"
dynamic = ["version"]
requires-python = ">=3.11,<3.14"
dependencies = [
    "aioftp>=0.23.1",
    "anndata>=0.12.0",
    "bioservices>=1.13.0",
    "cobamp@git+https://github.com/JoshLoecker/cobamp@master",
    "cobra>=0.28.0",
    "joypy>=0.2.6",
    "kaleido>=1.0.0",
    "loguru>=0.7.2",
    "notebook>=7.4.7",
    "numpy>=2",
    "openpyxl>=3.1.5",
    "pandas>=1.3.5",
    "python-louvain",
    "scanpy>=1.10.4",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.0",
    "seaborn>=0.13.2",
    "setuptools>=78.1.1",
    "statsmodels>=0.13.0; python_version < '3.12'",
    "statsmodels>=0.14.0; python_version >= '3.12'",
    "troppo@git+https://github.com/JoshLoecker/troppo@master",
    "zfpkm>=1.1.0",
]

[project.optional-dependencies]
gurobi = [
    "gurobipy<14",
]
interactive = [
    "ipython>=8.0.0",
    "jupyterlab>=4.3.2"
]

[tool.hatch.version]
path = "main/como/__init__.py"

[tool.hatch.build]
packages = ["main/como"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["main/src"]

[tool.uv.sources]
python-louvain = { git = "https://github.com/taynaud/python-louvain" }

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
